--- a/thesis.tex
+++ b/thesis.tex
@@ -143,7 +143,7 @@
 % \include{LiteratureReview/literatureReview}
 % \include{Year1Activity/year1Activity}
 \include{ResearchTimeline/researchTimeline}
-% \include{Conclusion/conclusion}
+\include{Conclusion/conclusion}
 % \include{Chapter1/chapter1}
 % \include{Chapter2/chapter2}
 % \include{Chapter3/chapter3}
