--- a/Introduction/introduction.tex
+++ b/Introduction/introduction.tex
@@ -14,7 +14,7 @@ One critical aspect influencing performance is memory management, where efficien
 utilization of resources is paramount. Translation Lookaside Buffers (TLBs) play a 
 pivotal role in this regard, expediting memory access by storing recently accessed memory translations.
 However, as applications grow in size and complexity, the capacity of TLBs often struggles to 
-keep pace, leading to performance bottlenecks. To address this challenge, researchers have 
+keep pace, leading to performance bottlenecks\cite{mittal_survey_2017}. To address this challenge, researchers have 
 turned to innovative solutions, one of which involves harnessing the benefits of huge pages.
 Huge pages, also known as large pages, allow for the allocation of memory in significantly 
 larger chunks compared to traditional small pages. By reducing the number of TLB entries 
