--- a/References/references.bib
+++ b/References/references.bib
@@ -418,3 +418,55 @@
 	urldate = {2024-06-18},
 	file = {Hugetlbfs Reservation — The Linux Kernel documentation:/Users/akilan/Zotero/storage/AV8UT59L/hugetlbfs_reserv.html:text/html},
 }
+
+@online{noauthor_osdi_nodate,
+	title = {{OSDI} Symposia {\textbar} {USENIX}},
+	url = {https://www.usenix.org/conferences/byname/179},
+	urldate = {2024-06-19},
+	file = {OSDI Symposia | USENIX:/Users/akilan/Zotero/storage/VI7YCLJV/179.html:text/html},
+}
+
+@online{noauthor_contigmalloc9_nodate,
+	title = {contigmalloc(9)},
+	url = {https://man.freebsd.org/cgi/man.cgi?query=contigmalloc&sektion=9&m%20%20%20%20anpath=FreeBSD},
+	urldate = {2024-06-24},
+	file = {contigmalloc(9):/Users/akilan/Zotero/storage/AHNXLXKL/man.html:text/html},
+}
+
+@article{mittal_survey_2017,
+	title = {A survey of techniques for architecting {TLBs}},
+	volume = {29},
+	rights = {Copyright © 2016 John Wiley \& Sons, Ltd.},
+	issn = {1532-0634},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/cpe.4061},
+	doi = {10.1002/cpe.4061},
+	abstract = {Translation lookaside buffer ({TLB}) caches virtual to physical address translation information and is used in systems ranging from embedded devices to high-end servers. Because {TLB} is accessed very frequently and a {TLB} miss is extremely costly, prudent management of {TLB} is important for improving performance and energy efficiency of processors. In this paper, we present a survey of techniques for architecting and managing {TLBs}. We characterize the techniques across several dimensions to highlight their similarities and distinctions. We believe that this paper will be useful for chip designers, computer architects, and system engineers.},
+	pages = {e4061},
+	number = {10},
+	journaltitle = {Concurrency and Computation: Practice and Experience},
+	author = {Mittal, Sparsh},
+	urldate = {2024-06-24},
+	date = {2017},
+	langid = {english},
+	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/cpe.4061},
+	keywords = {classification, power management, prefetching, Review, superpage, {TLB}, virtual cache, workload characterization},
+	file = {Snapshot:/Users/akilan/Zotero/storage/JJ9H6B2H/cpe.html:text/html},
+}
+
+@inproceedings{lietar_snmalloc_2019,
+	location = {New York, {NY}, {USA}},
+	title = {snmalloc: a message passing allocator},
+	isbn = {978-1-4503-6722-6},
+	url = {https://doi.org/10.1145/3315573.3329980},
+	doi = {10.1145/3315573.3329980},
+	series = {{ISMM} 2019},
+	shorttitle = {snmalloc},
+	abstract = {snmalloc is an implementation of malloc aimed at workloads in which objects are typically deallocated by a different thread than the one that had allocated them. We use the term producer/consumer for such workloads. snmalloc uses a novel message passing scheme which returns deallocated objects to the originating allocator in batches without taking any locks. It also uses a novel bump pointer-free list data structure with which just 64-bits of meta-data are sufficient for each 64 {KiB} slab. On such producer/consumer benchmarks our approach performs better than existing allocators. Snmalloc is available at {\textless}a href="https://github.com/Microsoft/snmalloc"{\textgreater}https://github.com/Microsoft/snmalloc{\textless}/a{\textgreater}.},
+	pages = {122--135},
+	booktitle = {Proceedings of the 2019 {ACM} {SIGPLAN} International Symposium on Memory Management},
+	publisher = {Association for Computing Machinery},
+	author = {Liétar, Paul and Butler, Theodore and Clebsch, Sylvan and Drossopoulou, Sophia and Franco, Juliana and Parkinson, Matthew J. and Shamis, Alex and Wintersteiger, Christoph M. and Chisnall, David},
+	urldate = {2024-06-23},
+	date = {2019-06-23},
+	keywords = {Memory allocation, message passing},
+}
